new IM; dossier export pdf and excel